--- a/weather.html
+++ b/weather.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="weather.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <title>Meteo App</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div class="weather-app">
@@ -42,21 +42,22 @@
           <div class="weather-app-temperature-container">
             <div id="icon"></div>
             <div class="weather-app-temperature" id="temperature"></div>
-            <div class="weatehr-app-unit">°C</div>
+            <div class="weather-app-unit">°C</div>
           </div>
         </div>
-
+        <div class="weather-forecast" id="forecast"></div>
+      </main>
       </main>
 
       <footer>
         This project was coded by
-        <a href="https://github.com/pkirimi/weather-app" target="_blank"> Purity Karwitha</a>,
+        <a href="https://github.com/pkirimi/shecodes" target="_blank"> Purity Karwitha</a>,
         is
-        <a href="https://github.com/pkirimi/weatherapp" target="_blank"
+        <a href="https://github.com/pkirimi/shecodes" target="_blank"
           >open-sourced on GitHub</a
         >
         and
-        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
+        <a href="https://app.netlify.com/" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
